# Display-Ambient-Light-Desktop

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README-navigation.md  README.md  about.html  api-test.html  debug_displays.rs  generate_test_wallpaper.html  lefthook.yml  log  package.json  pnpm-lock.yaml  rust-toolchain.toml  tailwind.config.js  test-led-mode-fix.html  test_navigation.html  test_websocket.html  vite.config.mjs  vite.config.ts  websocket-test.html
.augment/rules/: base.md
.github/: README.md
.github/workflows/: build.yml  ci.yml  dependencies.yml  dev-build.yml  release.yml
.serena/: project.yml
.serena/memories/: completion_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
debug_tools/: create_test_led_config.py  network_diagnostic.py  packet_interceptor.py  test_led_config_data.html  test_led_data_direct.py  test_tauri_api.py  virtual_led_board.py
docs/: color-sampling-implementation.md  color-sampling-migration.md  development-builds.md  device-auto-refresh-implementation.md  device-auto-refresh-testing.md  hardware-protocol.md  led-strip-data-flow.md  led-test-color-scheme.md  lefthook-setup.md  navigation-features.md  navigation-implementation.md
scripts/: navigation-examples.sh  test-navigation.sh  update-dev-version.sh
src/: App.tsx  about.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ambient_light_state.rs  auto_start.rs  frequency_calculator.rs  language_manager.rs  led_color.rs  led_data_processor.rs  led_data_sender.rs  led_preview_state.rs  led_status_manager.rs  led_status_manager_test.rs  led_test_effects.rs  main.rs  screen_stream.rs  screenshot.rs  screenshot_manager.rs  user_preferences.rs  websocket_events.rs
src-tauri/src/ambient_light/: config.rs  config_manager.rs  config_manager_v2.rs  config_v2.rs  cross_display_led_test.rs  mod.rs  publisher.rs  publisher_adapter.rs  publisher_test.rs
src-tauri/src/display/: brightness.rs  config_migrator.rs  display_config.rs  display_handler.rs  display_matcher.rs  display_registry.rs  display_state.rs  manager.rs  mod.rs  tests.rs
src-tauri/src/http_server/: mod.rs  websocket.rs
src-tauri/src/http_server/api/: config.rs  device.rs  display.rs  general.rs  health.rs  info.rs  led.rs  mod.rs
src-tauri/src/rpc/: board.rs  board_info.rs  channels.rs  display_setting_request.rs  mod.rs  mqtt.rs  udp.rs
src-tauri/src/tests/: integration_test.rs  mod.rs  stable_display_id_test.rs
src-tauri/src/volume/: manager.rs
src/components/: display-view.tsx  display-info-panel.tsx  display-list-container.tsx  display-view.tsx  led-strip-part.tsx  led-strip-parts-sorter.tsx  screen-view.tsx  websocket-listener.tsx
src/constants/: border.ts
src/contexts/: led-strip-configuration.context.ts
(+63 files in other folders)
