[package]
name = "ambient-light-control"
version = "2.0.0-alpha"
description = "A desktop application for controlling ambient lighting based on screen content"
authors = ["Ivan Li"]
license = "MIT"
repository = "https://github.com/IvanLi-CN/Display-Ambient-Light-Desktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-deep-link = "2.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
regex = "1.0"
serde_json = "1.0"
core-graphics = "0.23.2"
display-info = "0.4.1"
anyhow = "1.0.69"
tokio = {version = "1.26.0", features = ["full"] }
tokio-util = "0.7"
paris = { version = "1.5", features = ["timestamps", "macros"] }
log = "0.4.17"
env_logger = "0.10.0"
percent-encoding = "2.2.0"
url-build-parse = "9.0.0"
color_space = "0.5.3"
hex = "0.4.3"
toml = "0.7.3"
time = {version="0.3.35", features= ["formatting"] }
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.10.5"
core-foundation = "0.9.3"
tokio-stream = "0.1.14"
mdns-sd = "0.7.2"
futures = "0.3.28"
ddc-hi = "0.4.1"
coreaudio-rs = "0.11.2"
screen-capture-kit = "0.3.1"
image = { version = "0.24", features = ["jpeg"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
sha1 = "0.10"
tauri-plugin-opener = "2.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
